refactor(api): manual Java 21 improvements — var, String API, Collections, try-with-resources
- Adopt var for local variables where type is obvious from RHS
- Replace .trim() with .strip(), .isEmpty() with .isBlank()
- Replace Collections.unmodifiable/singletonList with List.of/Map.of
- Simplify try-with-resources using effectively-final variables

108 files changed across api module

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>