@@ -11,7 +11,6 @@ package org.openmrs.api.impl;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -399,7 +398,7 @@ public class ProviderServiceImpl extends BaseOpenmrsService implements ProviderS
 	 */
 	@Override
 	public void purgeProviderRole(ProviderRole providerRole) {
-		List<Provider> providersWithRole = getProvidersByRoles(Collections.singletonList(providerRole));
+		List<Provider> providersWithRole = getProvidersByRoles(List.of(providerRole));
 		if (!providersWithRole.isEmpty()) {
 			throw new APIException("Cannot purge a provider role that is assigned to one or more providers");
 		}
