@@ -10,7 +10,6 @@
 package org.openmrs.api.db.hibernate;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -39,15 +38,11 @@ public class HibernateFormDAOTest extends BaseContextSensitiveTest {
 	@Test
 	public void shouldFilterAgainstFormFields() {
 		List<FormField> formFields = Arrays.asList(new FormField(2), new FormField(3));
-		assertEquals(1,
-		    (Object) dao
-		            .getForms(null, false, Collections.emptyList(), null, formFields, formFields, Collections.emptyList())
-		            .size());
+		assertEquals(1, (Object) dao.getForms(null, false, List.of(), null, formFields, formFields, List.of()).size());
 
 		formFields = Arrays.asList(new FormField(2), new FormField(3), new FormField(5));
-		assertEquals(0, (Object) dao
-		        .getForms(null, false, Collections.emptyList(), null, formFields, formFields, Arrays.asList(new Field(3)))
-		        .size());
+		assertEquals(0,
+		    (Object) dao.getForms(null, false, List.of(), null, formFields, formFields, Arrays.asList(new Field(3))).size());
 
 	}
 
