@@ -10,7 +10,6 @@
 package org.openmrs.api.db.hibernate;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -60,9 +59,7 @@ public class HibernateLocationDAOTest extends BaseContextSensitiveTest {
 
 	@Test
 	public void getLocationsHavingAllTags_shouldReturnEmptyListWhenNoLocationHasTheGivenTags() {
-		assertEquals(0,
-		    dao.getLocationsHavingAllTags(Collections.singletonList(dao.getLocationTagByName("Nobody got this tag")))
-		            .size());
+		assertEquals(0, dao.getLocationsHavingAllTags(List.of(dao.getLocationTagByName("Nobody got this tag"))).size());
 	}
 
 	@Test
